<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.project.reader.ui.Activity.fontfamilyActivity">
    <include layout="@layout/fakestatusbar"/>
    <include layout="@layout/toolbar"></include>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:padding="10dp"
        android:orientation="vertical">
        <TextView
            android:id="@+id/poem_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:text="@string/poem_title"/>
        <TextView
            android:id="@+id/poem_line_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:text="@string/poem_line_one"/>
        <TextView
            android:id="@+id/poem_line_2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:text="@string/poem_line_two"/>
    </LinearLayout>
    <ListView
        android:id="@+id/font_family_listview"
        android:background="@color/search_bg_color"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>
</LinearLayout>