<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.project.reader.ui.Fragment.MineFragment">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="30dp"></TextView>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:id="@+id/login_area"
        android:gravity="center_vertical"
        android:paddingLeft="20dp"
        android:paddingTop="20dp">

        <com.project.reader.ui.widget.View.ImageViewPlus
            android:id="@+id/head_img"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:src="@mipmap/header"></com.project.reader.ui.widget.View.ImageViewPlus>
        <TextView
            android:id="@+id/login_title"
            android:text="@string/login"
            android:textSize="20dp"
            android:textColor="@color/black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="20dp"
            android:layout_toRightOf="@id/head_img"></TextView>
        <ImageView
            android:id="@+id/level_img"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_queue_grey"
            android:layout_alignLeft="@id/login_title"
            android:layout_below="@id/login_title"></ImageView>
        <TextView
            android:id="@+id/level_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:textColor="@color/black"
            android:textSize="@dimen/login_text_size"
            android:layout_marginTop="3dp"
            android:layout_toRightOf="@id/level_img"
            android:layout_alignTop="@+id/level_img"
            android:text=""></TextView>
        <ImageView
            android:id="@+id/coin_img"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_coin"
           android:layout_alignTop="@id/level_img"
            android:layout_marginLeft="10dp"
            android:layout_toRightOf="@id/level_text"
            android:visibility="invisible"></ImageView>
        <TextView
            android:id="@+id/coin_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/coin_img"
            android:layout_alignTop="@id/level_text"
            android:layout_marginLeft="5dp"
            android:textSize="@dimen/login_text_size"
            android:textColor="@color/black"
            android:text="99999"
            android:visibility="invisible"></TextView>
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/record_title"
        android:layout_width="match_parent"
        android:layout_height="26dp"
        android:background="@color/colorBackground"
        android:layout_below="@id/toolbar"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/record"
            android:textSize="18sp"
            android:textColor="@color/black"
            android:paddingLeft="5dp"></TextView>
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/recent_browser_area"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:clickable="true"
        android:background="@drawable/selector_textview"
        android:paddingLeft="10dp">
        <ImageView
            android:id="@+id/recent_Look_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:src="@drawable/ic_recenbrowse"></ImageView>
        <TextView
            android:id="@+id/recent_Look"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="20dp"
            android:layout_toRightOf="@id/recent_Look_icon"
            android:text="@string/recentLook"></TextView>
    </RelativeLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/search_bg_color"></TextView>
    <RelativeLayout
        android:id="@+id/feedback_area"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:clickable="true"
        android:background="@drawable/selector_textview"
        android:paddingLeft="10dp">
        <ImageView
            android:id="@+id/iv_feedback"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:src="@drawable/ic_feedback"></ImageView>
        <TextView
            android:id="@+id/tv_feedback"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="20dp"
            android:layout_toRightOf="@id/iv_feedback"
            android:text="@string/feedback"></TextView>
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/share_title"
        android:layout_width="match_parent"
        android:layout_height="26dp"
        android:background="@color/colorBackground"
        android:layout_below="@id/toolbar"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/share_title"
            android:textSize="18sp"
            android:textColor="@color/black"
            android:paddingLeft="5dp"></TextView>
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/share_area"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:clickable="true"
        android:background="@drawable/selector_textview"
        android:paddingLeft="10dp">
        <ImageView
            android:id="@+id/share_img"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:src="@drawable/ic_share"></ImageView>
        <TextView
            android:id="@+id/sharetext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="20dp"
            android:layout_toRightOf="@id/share_img"
            android:text="@string/share"></TextView>
    </RelativeLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/search_bg_color"></TextView>
    <RelativeLayout
        android:id="@+id/rate_area"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:clickable="true"
        android:background="@drawable/selector_textview"
        android:paddingLeft="10dp">
        <ImageView
            android:id="@+id/good_rate_img"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:src="@drawable/ic_rateus"></ImageView>
        <TextView
            android:id="@+id/goodrate_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="20dp"
            android:layout_toRightOf="@id/good_rate_img"
            android:text="@string/rateus"></TextView>
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/other_title"
        android:layout_width="match_parent"
        android:layout_height="26dp"
        android:background="@color/colorBackground"
        android:layout_below="@id/toolbar"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="其他"
            android:textSize="18sp"
            android:textColor="@color/black"
            android:paddingLeft="5dp"></TextView>
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/change_style_area"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:clickable="true"
        android:background="@drawable/selector_textview"
        android:paddingLeft="10dp">
        <ImageView
            android:id="@+id/change_style_img"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:src="@drawable/ic_changestyle"></ImageView>
        <TextView
            android:id="@+id/change_style_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="20dp"
            android:layout_toRightOf="@id/change_style_img"
            android:text="换肤"></TextView>
    </RelativeLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/search_bg_color"></TextView>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:clickable="true"
        android:id="@+id/about_app_area"
        android:background="@drawable/selector_textview"
        android:paddingLeft="10dp">
        <ImageView
            android:id="@+id/about_app_img"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:src="@drawable/ic_aboutapp"></ImageView>
        <TextView
            android:id="@+id/about_app_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="20dp"
            android:layout_toRightOf="@id/about_app_img"
            android:text="关于应用"></TextView>
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/search_bg_color"></TextView>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/loading_area"
        android:gravity="center"
        android:elevation="0dp"
        android:visibility="invisible">
    <com.github.ybq.android.spinkit.SpinKitView
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/spin_kit"
        style="@style/SpinKitView.Large.Circle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:SpinKit_Color="@color/colorAccent" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/spin_kit"
            android:layout_marginLeft="10dp"
            android:text="请稍候"></TextView>
    </RelativeLayout>
    </RelativeLayout>
</LinearLayout>