<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@color/colorBackground"
    tools:context="com.project.reader.ui.Activity.SearchBookActivity">
    <include layout="@layout/fakestatusbar"/>
    <include layout="@layout/toolbar"></include>
    <LinearLayout
        android:id="@+id/search_area"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:background="@color/search_bg_color"
        android:paddingLeft="15dp"
        android:paddingBottom="0dp"
        android:paddingRight="15dp"
        android:paddingTop="20dp">
        <EditText
            android:id="@+id/search_edit"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_weight="2"
            android:background="@drawable/edit_boarder"
            android:hint="@string/search_hint"
            android:imeOptions="actionSearch"></EditText>
        <TextView
            android:id="@+id/search_btn"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_weight="8"
            android:clickable="true"
            android:text="@string/search_book"
            android:gravity="center"
            android:textColor="@color/white"
            android:textSize="@dimen/textSize"
            android:background="@drawable/searchbtn_bg"></TextView>
    </LinearLayout>
    <RadioGroup
        android:id="@+id/search_radio_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:background="@color/search_bg_color"
        android:orientation="horizontal"
        android:layout_below="@+id/search_area">
        <androidx.appcompat.widget.AppCompatRadioButton
            android:id="@+id/fingBookName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="书名"
            android:textColor="@color/textSecondary"></androidx.appcompat.widget.AppCompatRadioButton>
        <androidx.appcompat.widget.AppCompatRadioButton
            android:id="@+id/fingAuthor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:text="作者"
            android:textColor="@color/textSecondary"></androidx.appcompat.widget.AppCompatRadioButton>
    </RadioGroup>
    <com.project.reader.ui.widget.View.RefreshProgressBar
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:id="@+id/refresh_bar"
        android:visibility="visible">
    </com.project.reader.ui.widget.View.RefreshProgressBar>
    <LinearLayout
        android:id="@+id/suggest_place"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_below="@id/search_radio_group">
    <LinearLayout
        android:id="@+id/suggest_area"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <TextView
            android:id="@+id/hot_search"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hot_search"
            android:textSize="18sp"
            android:textColor="@color/black"></TextView>
        <LinearLayout
            android:id="@+id/change_suggestion"
            android:layout_width="match_parent"
            android:clickable="true"
            android:descendantFocusability="blocksDescendants"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="right"
            android:layout_marginRight="10dp">
            <ImageView
                android:id="@+id/refresh_suggest"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_refresh"></ImageView>
            <TextView
                android:id="@+id/refresh_suggest_text"
                android:layout_width="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_height="wrap_content"
                android:text="@string/refresh_suggest"
                android:textSize="12sp"></TextView>
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/suggest_btn_area"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:orientation="horizontal"
        android:layout_below="@+id/suggest_title">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/suggest_btn_1"
                android:layout_width="wrap_content"
                android:clickable="true"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="left"
                android:textColor="@color/black"></TextView>

            <TextView
                android:id="@+id/suggest_btn_3"
                android:layout_width="wrap_content"
                android:clickable="true"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="left"
                android:textColor="@color/black"></TextView>

            <TextView
                android:id="@+id/suggest_btn_5"
                android:layout_width="wrap_content"
                android:clickable="true"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="left"
                android:textColor="@color/black"></TextView>

            <TextView
                android:id="@+id/suggest_btn_7"
                android:layout_width="wrap_content"
                android:clickable="true"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="left"

                android:textColor="@color/black"></TextView>

            <TextView
                android:id="@+id/suggest_btn_9"
                android:layout_width="wrap_content"
                android:clickable="true"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="left"
                android:textColor="@color/black"></TextView>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_weight="1"
            >
            <TextView
                android:id="@+id/suggest_btn_2"
                android:layout_width="wrap_content"
                android:clickable="true"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:gravity="left"
                android:textColor="@color/black"></TextView>
            <TextView
                android:id="@+id/suggest_btn_4"
                android:layout_width="wrap_content"
                android:clickable="true"
                android:layout_weight="1"
                android:gravity="left"
                android:layout_height="match_parent"
                android:textColor="@color/black"
                ></TextView>
            <TextView
                android:id="@+id/suggest_btn_6"
                android:layout_width="wrap_content"
                android:clickable="true"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:gravity="left"
                android:textColor="@color/black"></TextView>
            <TextView
                android:id="@+id/suggest_btn_8"
                android:clickable="true"
                android:layout_width="wrap_content"
                android:layout_weight="1"
                android:gravity="left"
                android:layout_height="match_parent"
                android:textColor="@color/black"
                ></TextView>
            <TextView
                android:id="@+id/suggest_btn_10"
                android:layout_width="wrap_content"
                android:clickable="true"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:gravity="left"
                android:textColor="@color/black"></TextView>
        </LinearLayout>
    </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/history_area"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_below="@id/suggest_place"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/history_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/history_list"
                android:textSize="18sp"
                android:textColor="@color/black"></TextView>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="right">
                <TextView
                    android:id="@+id/clear_history"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/clear_history"
                    ></TextView>
            </LinearLayout>
        </LinearLayout>
        <me.gujun.android.taggroup.TagGroup
            android:id="@+id/search_history"
            style="@style/TagGroup"
            app:atg_textColor="@color/black"
            app:atg_verticalSpacing="15dp"
            app:atg_verticalPadding="8dp"
            android:paddingStart="5dp"
            android:paddingTop="10dp"
            android:paddingEnd="5dp"
            app:atg_backgroundColor="@color/tagGroupColor"
            app:atg_borderColor="@color/tagGroupColor"/>
    </LinearLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3">
        <include layout="@layout/layout_error"
            android:id="@+id/error_layout"
            android:visibility="invisible"/>
        <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_search_books_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
            android:orientation="horizontal"
        android:padding="5dp"
        android:visibility="visible"></androidx.recyclerview.widget.RecyclerView>
    </RelativeLayout>

</LinearLayout>