<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.project.reader.ui.Activity.AboutAppActivity">
    <include layout="@layout/fakestatusbar"/>
    <include layout="@layout/toolbar"></include>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:orientation="vertical"
        android:gravity="center"
        android:id="@+id/logo_area">
        <com.makeramen.roundedimageview.RoundedImageView
            android:layout_width="72dp"
            android:layout_height="72dp"
            android:src="@mipmap/logo"/>
        <TextView
            android:id="@+id/tv_version"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:clickable="true"
            android:focusable="true"
            android:textColor="@color/black"
            android:text="SimpleRead"/>
    </LinearLayout>
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_gravity="center_vertical"
        android:layout_margin="6dp"
        app:cardBackgroundColor="@color/search_bg_color"
        android:layout_height="100dp">
        <RelativeLayout
            android:id="@+id/producer_title"
            android:layout_width="wrap_content"
            android:clickable="true"
            android:focusable="true"
            android:layout_marginLeft="0dp"
            android:layout_marginTop="5dp"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <com.project.reader.ui.widget.View.ImageViewPlus
            android:id="@+id/imageview1"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_marginLeft="20dp"
            android:src="@mipmap/group"></com.project.reader.ui.widget.View.ImageViewPlus>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="50dp"
                android:layout_toRightOf="@id/imageview1"
                android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/textSize"
                android:layout_marginLeft="10dp"
                android:text="开发团队——best team:"
                android:layout_toRightOf="@+id/imageview1"
                android:textColor="@color/black"></TextView>
            <me.gujun.android.taggroup.TagGroup
                android:id="@+id/producer_info"
                android:layout_width="wrap_content"
                app:atg_horizontalSpacing="10dp"
                app:atg_verticalPadding="5dp"
                app:atg_textSize="15sp"
                android:layout_height="wrap_content"></me.gujun.android.taggroup.TagGroup>
            </LinearLayout>
        </RelativeLayout>
    </androidx.cardview.widget.CardView>
    <androidx.cardview.widget.CardView
        android:id="@+id/checkupdate_area"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_margin="6dp"
        android:clickable="true"
        android:focusable="true"
        android:foreground="?attr/selectableItemBackground"
       app:cardBackgroundColor="@color/search_bg_color">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp">
        <ImageView
            android:id="@+id/chenckupdate_img"
            android:padding="2dp"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/ic_update"
            app:tint="@color/black"></ImageView>
        <TextView
            android:id="@+id/chenckupdate_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:layout_marginLeft="10dp"
            android:textColor="@color/black"
            android:text="@string/checkupdate"></TextView>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
    <androidx.cardview.widget.CardView
        android:id="@+id/responsibility"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:focusable="true"
        app:cardBackgroundColor="@color/search_bg_color"
        android:foreground="?attr/selectableItemBackground"
        android:layout_margin="6dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp">
        <ImageView
            android:id="@+id/responsibility_img"
            android:padding="2dp"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/ic_respon"
            app:tint="@color/black"></ImageView>
        <TextView
            android:id="@+id/responsibility_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:layout_marginLeft="10dp"
            android:textColor="@color/black"
            android:text="@string/responsibility"></TextView>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
    <androidx.cardview.widget.CardView
        android:id="@+id/joinQQ"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:focusable="true"
        app:cardBackgroundColor="@color/search_bg_color"
        android:foreground="?attr/selectableItemBackground"
        android:layout_margin="6dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp">
            <ImageView
                android:id="@+id/QQ_img"
                android:padding="2dp"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/ic_qq"
                app:tint="@color/black"></ImageView>
            <TextView
                android:id="@+id/qq_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:layout_marginLeft="10dp"
                android:textColor="@color/black"
                android:text="@string/joinQQ"></TextView>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>